# gatekeepervpn

./: .gitignore  CLAUDE.md  CLAUDE_160126.md  Cargo.toml  INSTALL.md  PlanToMVP.md  QUICKSTART.md  README.md  client.example.toml  client.toml  server.example.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  error.rs  handshake.rs  ip_parser.rs  ip_pool.rs  lib.rs  logging.rs  nat.rs  protocol.rs  routing.rs  socket.rs  tun_device.rs
crates/common/tests/: integration_test.rs
crates/keygen/: Cargo.toml
crates/keygen/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: CLAUDE.md.macosgui  macos-gui-plan.md
scripts/: diagnose.sh  fix-installation.sh  setup-client.sh  setup-server-full.sh  setup-server.sh  setup.sh
systemd/: gatekeeper.service
