[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/server",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1.49", features = ["full"] }

# Crypto
snow = "0.10"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
bytes = "1.11"
base64 = "0.22"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Network
tun = { version = "0.8", features = ["async"] }
