[package]
name = "gatekeeper-keygen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gkvpn"
path = "src/main.rs"

[dependencies]
gatekeeper-common = { path = "../common" }
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
x25519-dalek.workspace = true
chrono.workspace = true
